Cascading Change Log

2.1.6 [unreleased]

  Fixed issue where join field level c.t.Hasher instances were not honored during a c.p.HashJoin.

  Fixed issue where a j.l.StackOverflowError would be thrown if the Hadoop mapred.input.format.class property
  was not set.

  Updated c.t.Fields#size() to return Fields.NONE on size == 0, instead of failing.

  Fixed issue where Fields.REPLACE on an incoming Fields.UNKNOWN could result in a
  java.lang.ArrayIndexOutOfBoundsException during runtime.

  Updated c.s.h.HadoopStepStats counter caching strategy to make a final attempt even if max timeouts have been
  met. Added "cascading.step.counter.timeout" property to allow tuning of timeout period.

2.1.5

  Updated c.t.h.u.BytesComparator to implement c.t.Hasher as a convenience.

  Fixed issue where c.c.CascadeListener was receiving null as the c.c.Cascade parameter.

2.1.4

  Added ability to capture frameworks used in an application via c.p.AppProps.

  Restored platform test compatibility with Cascading 2.0.x via return of c.p.PlatformRunner.Platform annotation
  and deprecated c.t.LocalPlatform and c.t.HadoopPlatform platform implementations.

2.1.3

  Fix for extra trailing ']' in c.t.Tap#toString().

  Fix for c.f.FlowProcess#getNumProcessSlices() incorrectly returning zero in local mode, should be 1.

  Fix for c.p.a.AggregateBy not honoring the global system property threshold value if not overridden on the ctor.

  Fix for NPE if c.f.FlowProcess returns null config.

  Fixed issue where a c.f.FlowStep would attempt to detect if it should be skipped regardless of whether the "runID"
  had been set or not on the c.f.Flow enabling restartable flows.

2.1.2

  Fixed issue where c.f.FlowProcess#openForWrite on Hadoop would re-use the existing o.a.h.m.OutputCollector instance
  as that used in the current task.

  Fixed issue where fetching remote Hadoop counter values could block indefinitely. Fetching remote counters is now